--- a/datahandler.ipynb
+++ b/datahandler.ipynb
@@ -393,7 +393,7 @@
    ],
    "source": [
     "# Load refactored dataframe\n",
-    "origin_df = pd.read_table(DATA_PATH+\"_refactored.txt\", names=COL_NAMES)"
+    "origin_df = pd.read_table(DATA_PATH+\"_refactored.intr\", names=COL_NAMES)"
    ]
   },
   {
@@ -787,8 +787,8 @@
    "outputs": [],
    "source": [
     "fdf.to_csv(filtering_filename,sep=\" \", index=False, header=None)\n",
-    "filtered_uid_map.to_csv(DATA_PATH+\"_filted_uid_map.uid\",sep=\" \", index=False, header=None)\n",
-    "filtered_iid_map.to_csv(DATA_PATH+\"_filted_iid_map.iid\",sep=\" \", index=False, header=None)"
+    "filtered_uid_map.to_csv(DATA_PATH+\"_filtered_uid_map.uid\",sep=\" \", index=False, header=None)\n",
+    "filtered_iid_map.to_csv(DATA_PATH+\"_filtered_iid_map.iid\",sep=\" \", index=False, header=None)"
    ]
   },
   {
@@ -891,6 +891,7 @@
     "while i < INC_STEP:\n",
     "    count = 0\n",
     "    if is_base:\n",
+    "        # Base block\n",
     "        while count < 821971:\n",
     "            row = ucdf.iloc[cur]\n",
     "            base_user.append(row['user'])\n",
@@ -904,6 +905,7 @@
     "        print('Base Done')\n",
     "        is_base = False\n",
     "    elif i == INC_STEP-1:\n",
+    "        # Last incremental block\n",
     "        inc_user[i]= ucdf[cur:]['user'].values.tolist()\n",
     "        count = ucdf[cur:]['item'].values.sum()\n",
     "        with open(INC_USER_FILE_PATH+f\"inc_user_{i+1}.data\", 'w') as fp:\n",
@@ -914,6 +916,7 @@
     "        print(f\"Inc Block{i+1} Size : {count}\")\n",
     "        i += 1\n",
     "    else:\n",
+    "        # Incremental block\n",
     "        while count <= 41098:\n",
     "            row = ucdf.iloc[cur]\n",
     "            inc_user[i].append(row['user'])\n",
@@ -981,6 +984,7 @@
     "while i < INC_STEP:\n",
     "    count = 0\n",
     "    if is_base:\n",
+    "        # Base block\n",
     "        while count < 821971:\n",
     "            row = icdf.iloc[cur]\n",
     "            base_item.append(row['item'])\n",
@@ -994,6 +998,7 @@
     "        print('Base Done')\n",
     "        is_base = False\n",
     "    elif i == INC_STEP-1:\n",
+    "        # Last incremental block\n",
     "        inc_item[i]= icdf[cur:]['item'].values.tolist()\n",
     "        count = icdf[cur:]['user'].values.sum()\n",
     "        with open(INC_ITEM_FILE_PATH+f\"inc_item_{i+1}.data\", 'w') as fp:\n",
@@ -1004,6 +1009,7 @@
     "        print(f\"Inc Block{i+1} Size : {count}\")\n",
     "        i += 1\n",
     "    else:\n",
+    "        # Incremental block\n",
     "        while count <= 41098:\n",
     "            row = icdf.iloc[cur]\n",
     "            inc_item[i].append(row['item'])\n",
