04APR2023_ Data Loader

--- a/datahandler.ipynb
+++ b/datahandler.ipynb
@@ -43,13 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from os.path import join\n",
-    "\n",
+    "import numpy as np\n",
+    "np.random.seed(2023)\n",
     "#Gowalla setting\n",
     "#================================================\n",
     "DATA_NAME = \"Gowalla\"\n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,12 +128,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "반복문이 아닌 판다스 기본 기능을 활용하니까 훨씬 빠르다"
+    "반복문이 아닌 판다스 기본 기능을 활용하니까 훨씬 빠르다</br>\n",
+    "mapping = {index: i for i, index in enumerate(df.index.unique())}</br>\n",
+    "이 방법으로 훨씬 간단하게 매핑 가능"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +348,7 @@
        "[6442892 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,12 +362,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save refactored dataframe\n",
-    "temp_df.to_csv(DATA_PATH+\"_refactored.intr\",index=False,header=None)"
+    "temp_df.to_csv(DATA_PATH+\"\\\\refactored.intr\",sep=\" \",index=False,header=None)"
    ]
   },
   {
@@ -393,7 +396,7 @@
    ],
    "source": [
     "# Load refactored dataframe\n",
-    "origin_df = pd.read_table(DATA_PATH+\"_refactored.intr\", names=COL_NAMES)"
+    "origin_df = pd.read_table(DATA_PATH+\"\\\\refactored.intr\", names=COL_NAMES)"
    ]
   },
   {
@@ -421,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,11 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "WO_filtering_filename = DATA_PATH + \"_WO_Filtering.intr\"\n",
+    "WO_filtering_filename = DATA_PATH + \"\\\\WO_Filtering.intr\"\n",
     "if not os.path.exists(WO_filtering_filename):\n",
     "    WO_filtering.to_csv(WO_filtering_filename,sep=\" \", index=False, header=None)"
    ]
@@ -453,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -590,13 +593,13 @@
        "[1027464 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtering_filename = DATA_PATH + \"_Filtering_refactored.intr\"\n",
+    "filtering_filename = DATA_PATH + \"\\\\filtering_refactored.intr\"\n",
     "fdf = df\n",
     "\n",
     "while fdf.user.value_counts().min() < FILT_THRESHOLD or fdf.item.value_counts().min() < FILT_THRESHOLD:\n",
@@ -632,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +772,7 @@
        "[1027464 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,14 +785,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "fdf.to_csv(filtering_filename,sep=\" \", index=False, header=None)\n",
-    "filtered_uid_map.to_csv(DATA_PATH+\"_filtered_uid_map.uid\",sep=\" \", index=False, header=None)\n",
-    "filtered_iid_map.to_csv(DATA_PATH+\"_filtered_iid_map.iid\",sep=\" \", index=False, header=None)"
+    "filtered_uid_map.to_csv(DATA_PATH+\"\\\\filtered_uid_map.uid\",sep=\" \", index=False, header=None)\n",
+    "filtered_iid_map.to_csv(DATA_PATH+\"\\\\filtered_iid_map.iid\",sep=\" \", index=False, header=None)\n",
+    "shuffled = pd.DataFrame(np.random.permutation(fdf))\n",
+    "train = shuffled[:len(fdf)*8//10]\n",
+    "test = shuffled[len(fdf)*8//10:]\n",
+    "train.to_csv(DATA_PATH+\"\\\\train.data\",sep=\" \", index=False, header=None)\n",
+    "test.to_csv(DATA_PATH+\"\\\\test.data\",sep=\" \", index=False, header=None)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split in to train, test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -822,12 +845,12 @@
     "INC_TIME_FILE_PATH = os.path.join(SAVE_PATH,f\"Incremental\\\\{DATA_NAME}\\\\Time\\\\\")\n",
     "fdf = fdf.sort_values(by=\"user\", ascending=True)\n",
     "print(len(fdf))\n",
-    "pivot = len(fdf)*8//10\n",
+    "pivot = len(fdf)*BASE_DATA_RATIO//10\n",
     "fdf[:pivot].to_csv(INC_TIME_FILE_PATH + \"base.data\", sep=\" \", header=None, index=False)\n",
     "print(pivot)\n",
     "remain = fdf[pivot:]\n",
     "start = 0\n",
-    "length = (len(fdf) - pivot)//5\n",
+    "length = (len(fdf) - pivot)//INC_STEP\n",
     "inc_block = []\n",
     "for i in range(INC_STEP):\n",
     "    if i != INC_STEP-1:\n",
@@ -883,7 +906,9 @@
     "is_base = True\n",
     "\n",
     "base_user = []\n",
+    "base_size = len(fdf)*BASE_DATA_RATIO//10\n",
     "inc_user = [[] for i in range(INC_STEP)]\n",
+    "inc_size = len(fdf)*INC_RATIO\n",
     "\n",
     "i = 0\n",
     "cur = 0\n",
@@ -892,7 +917,7 @@
     "    count = 0\n",
     "    if is_base:\n",
     "        # Base block\n",
-    "        while count < 821971:\n",
+    "        while count < base_size:\n",
     "            row = ucdf.iloc[cur]\n",
     "            base_user.append(row['user'])\n",
     "            count += row['item']\n",
@@ -917,7 +942,7 @@
     "        i += 1\n",
     "    else:\n",
     "        # Incremental block\n",
-    "        while count <= 41098:\n",
+    "        while count <= inc_size:\n",
     "            row = ucdf.iloc[cur]\n",
     "            inc_user[i].append(row['user'])\n",
     "            count += row['item']\n",
@@ -985,7 +1010,7 @@
     "    count = 0\n",
     "    if is_base:\n",
     "        # Base block\n",
-    "        while count < 821971:\n",
+    "        while count < base_size:\n",
     "            row = icdf.iloc[cur]\n",
     "            base_item.append(row['item'])\n",
     "            count += row['user']\n",
@@ -1010,7 +1035,7 @@
     "        i += 1\n",
     "    else:\n",
     "        # Incremental block\n",
-    "        while count <= 41098:\n",
+    "        while count <= inc_size:\n",
     "            row = icdf.iloc[cur]\n",
     "            inc_item[i].append(row['item'])\n",
     "            count += row['user']\n",
@@ -1034,7 +1059,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Jupyter_notebook",
+   "display_name": "Jupyter_Notebook",
    "language": "python",
    "name": "jupyter_notebook"
   },
@@ -1048,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.7.16"
   },
   "orig_nbformat": 4
  },
