--- a/MGCCF.ipynb
+++ b/MGCCF.ipynb
@@ -105,9 +105,10 @@
     "all_dataset = ['lastfm', 'gowalla', 'yelp2018', 'amazon-book']\n",
     "all_models  = ['MMGCF']\n",
     "# config['batch_size'] = 4096\n",
-    "config['bpr_batch_size'] = 2048 # the batch size for bpr loss training procedure\"\n",
+    "config['emb_size'] = 64\n",
+    "config['bpr_batch_size'] = 1024 # the batch size for bpr loss training procedure\"\n",
     "config['latent_dim_rec'] = 64 # the embedding size\n",
-    "config['n_layers']= 3 # the layer num \n",
+    "config['n_layers']= 2 # the layer num \n",
     "config['dropout'] = 0 # using the dropout or not\n",
     "config['keep_prob']  = 0.6 # the batch size for bpr loss training procedure\n",
     "config['A_n_fold'] = 100 # the fold num used to split large adj matrix, like gowalla\n",
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,7 @@
     "            self.num_user_node = len(self.edges['user'].unique())\n",
     "            self.num_item_node = len(self.edges['item'].unique())\n",
     "            print(f\"User node : {self.num_user_node}\\n \\\n",
-    "                  Item node : {self._item_node}\\n \\\n",
+    "                  Item node : {self.num_item_node}\\n \\\n",
     "                  edges : {len(self.edges)}\")\n",
     "        else:\n",
     "            FileNotFoundError(f\"There are No train data in {path}\")\n",
@@ -212,10 +213,10 @@
     "        else:\n",
     "            Item_feature_path = None\n",
     "        self.get_adj_matrix()\n",
-    "        return self.train_edges, self.test_edges \n",
+    "        return self.edges\n",
     "    \n",
     "    def get_adj_matrix(self):\n",
-    "        adj_M = sp.coo_matrix((np.ones(len(self.train_edges)),(self.train_edges['user'],self.train_edges['item'])), dtype=np.float32)\n",
+    "        adj_M = sp.coo_matrix((np.ones(len(self.edges)),(self.edges['user'],self.edges['item'])), dtype=np.float32)\n",
     "        self.ui_matrix = adj_M\n",
     "        self.iu_matrix = adj_M.transpose()\n",
     "\n",
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -296,21 +297,18 @@
      "text": [
       "User node : 29858\n",
       "                   Item node : 40988\n",
-      "                   edges : 821971\n",
-      "User node : 29015\n",
-      "                   Item node : 39182\n",
-      "                   edges : 205493\n"
+      "                   edges : 821971\n"
      ]
     }
    ],
    "source": [
     "data = Gowalla()\n",
-    "train, test = data.load_data('C:\\\\Users\\\\PC\\\\Desktop\\\\MGCCF\\\\data\\\\Gowalla\\\\train.data','C:\\\\Users\\\\PC\\\\Desktop\\\\MGCCF\\\\data\\\\Gowalla\\\\test.data')"
+    "train = data.load_data('C:\\\\Users\\\\PC\\\\Desktop\\\\MGCCF\\\\data\\\\Gowalla\\\\train.data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,8 +316,11 @@
     "class MMGCF(nn.Module):\n",
     "    def __init__(self, data):\n",
     "        super(MMGCF, self).__init__()\n",
-    "        self.n_user = data.\n",
-    "        \n",
+    "        self.n_user = data.num_user_node\n",
+    "        self.n_item = data.num_item_node\n",
+    "        self.emb_size = config['emb_size']\n",
+    "        self.layers = config['n_layers']\n",
+    "\n",
     "    def init_weight(self):\n",
     "        # xavier init\n",
     "        initializer = nn.init.xavier_uniform_\n",
@@ -330,7 +331,8 @@
     "            'item_emb': nn.Parameter(initializer(torch.empty(self.n_item,\n",
     "                                                 self.emb_size)))\n",
     "        })\n",
-    "\n",
+    "        \n",
+    "        #init the paramenter\n",
     "        weight_dict = nn.ParameterDict()\n",
     "        layers = [self.emb_size] + self.layers\n",
     "        for k in range(len(self.layers)):\n",
@@ -338,11 +340,13 @@
     "                                                                      layers[k+1])))})\n",
     "            weight_dict.update({'b_gc_%d'%k: nn.Parameter(initializer(torch.empty(1, layers[k+1])))})\n",
     "\n",
-    "            weight_dict.update({'W_bi_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
+    "            weight_dict.update({'W_ag_%d'%k: nn.Parameter(initializer(torch.empty(layers[k],\n",
     "                                                                      layers[k+1])))})\n",
-    "            weight_dict.update({'b_bi_%d'%k: nn.Parameter(initializer(torch.empty(1, layers[k+1])))})\n",
+    "            weight_dict.update({'b_ag_%d'%k: nn.Parameter(initializer(torch.empty(1, layers[k+1])))})\n",
     "\n",
-    "        return embedding_dict, weight_dict"
+    "        return embedding_dict, weight_dict\n",
+    "    \n",
+    "    def "
    ]
   },
   {
