--- a/datahandler-ml.ipynb
+++ b/datahandler-ml.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -49,18 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "ROOT_PATH: C:\\tech\\Study\\KCC\n",
-      "DATA_PATH: C:\\tech\\Study\\KCC\\dataset\\Movielens\n",
-      "SAVE_PATH: C:\\tech\\Study\\KCC\\dataset\\Movielens\n",
-      "FILE_PATH1: C:\\tech\\Study\\KCC\\dataset\\Movielens\\ml-100k\\u.data\n",
-      "FILE_PATH2: C:\\tech\\Study\\KCC\\dataset\\Movielens\\ml-latest-small\\ratings.csv\n",
+      "ROOT_PATH: C:\\Users\\PC\\Desktop\\Study\\KCC-지원-dataset\n",
+      "DATA_PATH: C:\\Users\\PC\\Desktop\\Study\\KCC-지원-dataset\\dataset\\Movielens\n",
+      "SAVE_PATH: C:\\Users\\PC\\Desktop\\Study\\KCC-지원-dataset\\dataset\\Movielens\n",
+      "FILE_PATH1: C:\\Users\\PC\\Desktop\\Study\\KCC-지원-dataset\\dataset\\Movielens\\ml-100k\\u.data\n",
+      "FILE_PATH2: C:\\Users\\PC\\Desktop\\Study\\KCC-지원-dataset\\dataset\\Movielens\\ml-latest-small\\ratings.csv\n",
       "\n"
      ]
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "def print_info(df):\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "# Load File\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
@@ -233,14 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "outputs": [
     {
      "data": {
       "text/plain": "Empty DataFrame\nColumns: [user, item, rating, time]\nIndex: []",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>user</th>\n      <th>item</th>\n      <th>rating</th>\n      <th>time</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 71,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "def GetPositiveDf(df):\n",
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "def GetVailidDf(fdf):\n",
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "def GetSortedTimestampDf(df):\n",
@@ -404,14 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 35,
    "outputs": [
     {
      "data": {
       "text/plain": "       user    item  rating                          time\n44203   429     434     4.0 1970-01-01 00:00:00.828124615\n44198   429     351     4.0 1970-01-01 00:00:00.828124615\n44197   429     349     3.0 1970-01-01 00:00:00.828124615\n44179   429     227     3.0 1970-01-01 00:00:00.828124615\n44201   429     421     4.0 1970-01-01 00:00:00.828124615\n...     ...     ...     ...                           ...\n23563   233   81845     3.5 1970-01-01 00:00:01.537470521\n26713   272  148626     4.5 1970-01-01 00:00:01.537470612\n26714   272  158238     4.0 1970-01-01 00:00:01.537475893\n20509   210  122916     4.5 1970-01-01 00:00:01.537632280\n53110   514     162     4.0 1970-01-01 00:00:01.537799250\n\n[64760 rows x 4 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>user</th>\n      <th>item</th>\n      <th>rating</th>\n      <th>time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>44203</th>\n      <td>429</td>\n      <td>434</td>\n      <td>4.0</td>\n      <td>1970-01-01 00:00:00.828124615</td>\n    </tr>\n    <tr>\n      <th>44198</th>\n      <td>429</td>\n      <td>351</td>\n      <td>4.0</td>\n      <td>1970-01-01 00:00:00.828124615</td>\n    </tr>\n    <tr>\n      <th>44197</th>\n      <td>429</td>\n      <td>349</td>\n      <td>3.0</td>\n      <td>1970-01-01 00:00:00.828124615</td>\n    </tr>\n    <tr>\n      <th>44179</th>\n      <td>429</td>\n      <td>227</td>\n      <td>3.0</td>\n      <td>1970-01-01 00:00:00.828124615</td>\n    </tr>\n    <tr>\n      <th>44201</th>\n      <td>429</td>\n      <td>421</td>\n      <td>4.0</td>\n      <td>1970-01-01 00:00:00.828124615</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>23563</th>\n      <td>233</td>\n      <td>81845</td>\n      <td>3.5</td>\n      <td>1970-01-01 00:00:01.537470521</td>\n    </tr>\n    <tr>\n      <th>26713</th>\n      <td>272</td>\n      <td>148626</td>\n      <td>4.5</td>\n      <td>1970-01-01 00:00:01.537470612</td>\n    </tr>\n    <tr>\n      <th>26714</th>\n      <td>272</td>\n      <td>158238</td>\n      <td>4.0</td>\n      <td>1970-01-01 00:00:01.537475893</td>\n    </tr>\n    <tr>\n      <th>20509</th>\n      <td>210</td>\n      <td>122916</td>\n      <td>4.5</td>\n      <td>1970-01-01 00:00:01.537632280</td>\n    </tr>\n    <tr>\n      <th>53110</th>\n      <td>514</td>\n      <td>162</td>\n      <td>4.0</td>\n      <td>1970-01-01 00:00:01.537799250</td>\n    </tr>\n  </tbody>\n</table>\n<p>64760 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 77,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,13 +425,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 36,
    "outputs": [
     {
      "data": {
-      "text/plain": "'C:\\\\tech\\\\Study\\\\KCC\\\\dataset\\\\Movielens'"
+      "text/plain": "'C:\\\\Users\\\\PC\\\\Desktop\\\\Study\\\\KCC-지원-dataset\\\\dataset\\\\Movielens'"
      },
-     "execution_count": 78,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "pre_ml_100k_df.to_csv(SAVE_PATH + \"\\\\preprocessed_ml_100k.csv\", index=False)\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "pre_ml_100k_df = pd.read_csv(os.path.join(SAVE_PATH, \"preprocessed_ml_100k.csv\"))\n",
@@ -492,13 +492,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "outputs": [
     {
      "data": {
-      "text/plain": "'C:\\\\tech\\\\Study\\\\KCC\\\\dataset\\\\Movielens\\\\increase\\\\'"
+      "text/plain": "'C:\\\\Users\\\\PC\\\\Desktop\\\\Study\\\\KCC-지원-dataset\\\\dataset\\\\Movielens\\\\increase\\\\'"
      },
-     "execution_count": 81,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "outputs": [
     {
      "name": "stdout",
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 41,
    "outputs": [
     {
      "name": "stdout",
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 42,
    "outputs": [],
    "source": [
     "pre_ml_100k_df = pd.read_csv(os.path.join(SAVE_PATH, \"preprocessed_ml_100k.csv\"))\n",
@@ -622,13 +622,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
    "outputs": [
     {
      "data": {
-      "text/plain": "'C:\\\\tech\\\\Study\\\\KCC\\\\dataset\\\\Movielens\\\\fixed\\\\'"
+      "text/plain": "'C:\\\\Users\\\\PC\\\\Desktop\\\\Study\\\\KCC-지원-dataset\\\\dataset\\\\Movielens\\\\fixed\\\\'"
      },
-     "execution_count": 85,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "outputs": [
     {
      "name": "stdout",
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 45,
    "outputs": [
     {
      "name": "stdout",
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "pre_ml_100k_df = pd.read_csv(os.path.join(SAVE_PATH, \"preprocessed_ml_100k.csv\"))\n",
@@ -751,13 +751,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 47,
    "outputs": [
     {
      "data": {
-      "text/plain": "'C:\\\\tech\\\\Study\\\\KCC\\\\dataset\\\\Movielens\\\\user\\\\'"
+      "text/plain": "'C:\\\\Users\\\\PC\\\\Desktop\\\\Study\\\\KCC-지원-dataset\\\\dataset\\\\Movielens\\\\user\\\\'"
      },
-     "execution_count": 89,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 49,
    "outputs": [
     {
      "name": "stdout",
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 50,
    "outputs": [],
    "source": [
     "pre_ml_100k_df = pd.read_csv(os.path.join(SAVE_PATH, \"preprocessed_ml_100k.csv\"))\n",
@@ -878,13 +878,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 51,
    "outputs": [
     {
      "data": {
-      "text/plain": "'C:\\\\tech\\\\Study\\\\KCC\\\\dataset\\\\Movielens\\\\item\\\\'"
+      "text/plain": "'C:\\\\Users\\\\PC\\\\Desktop\\\\Study\\\\KCC-지원-dataset\\\\dataset\\\\Movielens\\\\item\\\\'"
      },
-     "execution_count": 93,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 52,
    "outputs": [
     {
      "name": "stdout",
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 53,
    "outputs": [
     {
      "name": "stdout",
