--- a/datahandler.ipynb
+++ b/datahandler.ipynb
@@ -504,7 +504,7 @@
     "base_user = []\n",
     "base_size = len(fdf)*BASE_DATA_RATIO//10\n",
     "inc_user = [[] for i in range(INC_STEP)]\n",
-    "inc_size = len(fdf)*INC_RATIO\n",
+    "inc_size = len(fdf)*INC_RATIO//10\n",
     "\n",
     "i = 0\n",
     "cur = 0\n",
