--- a/datahandler-ml.ipynb
+++ b/datahandler-ml.ipynb
@@ -40,6 +40,13 @@
   },
   {
    "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "## 데이터 로딩"
    ],
