--- a/NCF-EWC.ipynb
+++ b/NCF-EWC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 113,
    "outputs": [],
    "source": [
     "class NCF_EWC(nn.Module):\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 113,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 113,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 114,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 115,
    "outputs": [],
    "source": [
     "# 데이터 로드\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 116,
    "outputs": [
     {
      "name": "stdout",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 117,
    "outputs": [],
    "source": [
     "# 데이터 전처리\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 118,
    "outputs": [],
    "source": [
     "# train/test 8:2 분리\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 119,
    "outputs": [],
    "source": [
     "class MovielensDataset(Dataset):\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 120,
    "outputs": [],
    "source": [
     "# NCF 모델\n",
@@ -300,13 +300,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 121,
    "outputs": [
     {
      "data": {
       "text/plain": "device(type='cuda')"
      },
-     "execution_count": 54,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 122,
    "outputs": [],
    "source": [
     "def train(model, device, train_loader, optimizer, epoch):\n",
@@ -373,7 +373,7 @@
     "        train_loss += loss.item()\n",
     "\n",
     "    train_loss /= len(train_loader)\n",
-    "    print('Train Epoch: {} \\tLoss: {:.6f}'.format(epoch, train_loss))\n",
+    "    # print('Train Epoch: {} \\tLoss: {:.6f}'.format(epoch, train_loss))\n",
     "\n",
     "    return train_loss"
    ],
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 123,
    "outputs": [],
    "source": [
     "def recall_at_k(output, target, k):\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 124,
    "outputs": [],
    "source": [
     "# 모델 객체 생성\n",
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 125,
    "outputs": [],
    "source": [
     "# 데이터 로더 설정\n",
@@ -482,55 +482,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 126,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|███▎      | 1/3 [00:09<00:19,  9.51s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Epoch: 1 \tLoss: 0.570234\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|██████▋   | 2/3 [00:18<00:09,  9.33s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Epoch: 2 \tLoss: 0.547015\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:27<00:00,  9.28s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Epoch: 3 \tLoss: 0.521258\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 3/3 [00:20<00:00,  6.78s/it]\n"
      ]
     }
    ],
@@ -546,13 +504,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 127,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4236058492890813\n"
+      "0.5051735848696395\n"
      ]
     }
    ],
@@ -590,7 +548,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 128,
+   "outputs": [],
+   "source": [
+    "EPOCH = 50"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
    "outputs": [
     {
      "name": "stdout",
@@ -603,28 +572,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:09<00:00,  9.37s/it]"
+      "100%|██████████| 50/50 [05:32<00:00,  6.64s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 \tLoss: 0.574624\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 0 TASK recall20 = 0.3661147016523914\n",
+      "******* At 0 TASK recall20 = 0.4234914415812289\n",
       "\n",
       "************** Train Start At TASK1\n"
      ]
@@ -633,28 +588,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.05s/it]"
+      "100%|██████████| 50/50 [00:34<00:00,  1.43it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 \tLoss: 0.528001\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 1 TASK recall20 = 0.35214051663091306\n",
+      "******* At 1 TASK recall20 = 0.4219339774235299\n",
       "\n",
       "************** Train Start At TASK2\n"
      ]
@@ -663,28 +604,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.12s/it]"
+      "100%|██████████| 50/50 [00:34<00:00,  1.44it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 \tLoss: 0.565318\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 2 TASK recall20 = 0.3789854539852393\n",
+      "******* At 2 TASK recall20 = 0.3692853047365421\n",
       "\n",
       "************** Train Start At TASK3\n"
      ]
@@ -693,34 +620,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.04s/it]"
+      "100%|██████████| 50/50 [00:36<00:00,  1.37it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 \tLoss: 0.595232\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 3 TASK recall20 = 0.4027429768129399\n",
-      "\n"
+      "******* At 3 TASK recall20 = 0.39202805275195524\n",
+      "\n",
+      "avg recall : 0.40168469412331403\n"
      ]
     }
    ],
    "source": [
+    "recall_list = []\n",
+    "\n",
     "for i in range(len(dfs)-1):\n",
+    "\n",
     "    if i == 0:\n",
     "        # base block train-test\n",
     "\n",
@@ -739,13 +656,14 @@
     "        optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "        # train\n",
-    "        epoch = 1\n",
+    "        epoch = EPOCH\n",
     "        print(f\"************** Train Start At TASK{i}\")\n",
     "        for e in tqdm(range(1, epoch+1)):\n",
     "            train(model, device, train_loader0, optimizer, e)\n",
     "\n",
     "        # test\n",
     "        _, recall20 = test(model, device, test_loader0)\n",
+    "        recall_list.append(recall20)\n",
     "        print(f\"******* At {i} TASK recall20 = {recall20}\\n\")\n",
     "\n",
     "    else:\n",
@@ -758,14 +676,17 @@
     "        test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False)\n",
     "\n",
     "        # train\n",
-    "        epoch = 1\n",
+    "        epoch = EPOCH\n",
     "        print(f\"************** Train Start At TASK{i}\")\n",
     "        for e in tqdm(range(1, epoch+1)):\n",
     "            train(model, device, train_loader, optimizer, e)\n",
     "\n",
     "        # test\n",
     "        _, recall20 = test(model, device, test_loader)\n",
-    "        print(f\"******* At {i} TASK recall20 = {recall20}\\n\")"
+    "        recall_list.append(recall20)\n",
+    "        print(f\"******* At {i} TASK recall20 = {recall20}\\n\")\n",
+    "\n",
+    "print(f\"avg recall : {sum(recall_list)/len(recall_list)}\")"
    ],
    "metadata": {
     "collapsed": false
@@ -796,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 130,
    "outputs": [],
    "source": [
     "# 모델 객체 생성\n",
@@ -812,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 131,
    "outputs": [],
    "source": [
     "# EWC에 필요한 변수\n",
@@ -826,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 132,
    "outputs": [],
    "source": [
     "# Task가 끝날 때 마다 optpar와 fisher를 저장해주는 함수.\n",
@@ -856,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 133,
    "outputs": [],
    "source": [
     "# EWC를 적용한 train 함수\n",
@@ -883,7 +804,7 @@
     "        optimizer.step()\n",
     "\n",
     "    train_loss /= len(train_loader)\n",
-    "    print('Train Epoch: {} \\tLoss: {:.6f}'.format(epoch, train_loss))\n",
+    "    # print('Train Epoch: {} \\tLoss: {:.6f}'.format(epoch, train_loss))\n",
     "\n",
     "    return train_loss"
    ],
@@ -893,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 134,
    "outputs": [
     {
      "name": "stdout",
@@ -906,28 +827,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:09<00:00,  9.18s/it]"
+      "100%|██████████| 50/50 [05:21<00:00,  6.43s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 \tLoss: 0.575395\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 0 TASK recall20 = 0.34986656705256214\n",
+      "******* At 0 TASK recall20 = 0.424965131054209\n",
       "\n",
       "************** Train Start At TASK1\n"
      ]
@@ -936,28 +843,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.03s/it]"
+      "100%|██████████| 50/50 [00:40<00:00,  1.23it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 \tLoss: 0.550288\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 1 TASK recall20 = 0.34314163431133093\n",
+      "******* At 1 TASK recall20 = 0.4120386938907598\n",
       "\n",
       "************** Train Start At TASK2\n"
      ]
@@ -966,28 +859,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.11s/it]"
+      "100%|██████████| 50/50 [00:42<00:00,  1.16it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 \tLoss: 0.648375\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 2 TASK recall20 = 0.36362729652931813\n",
+      "******* At 2 TASK recall20 = 0.38005163246079493\n",
       "\n",
       "************** Train Start At TASK3\n"
      ]
@@ -996,33 +875,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.16s/it]"
+      "100%|██████████| 50/50 [00:47<00:00,  1.05it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 \tLoss: 0.712408\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "******* At 3 TASK recall20 = 0.37396391392930556\n",
-      "\n"
+      "******* At 3 TASK recall20 = 0.3987114958857235\n",
+      "\n",
+      "avg recall : 0.40394173832287184\n"
      ]
     }
    ],
    "source": [
+    "recall_list = []\n",
     "for i in range(len(dfs)-1):\n",
     "    if i == 0:\n",
     "        # base block train-test\n",
@@ -1042,7 +909,7 @@
     "        optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "        # train\n",
-    "        epoch = 1\n",
+    "        epoch = EPOCH\n",
     "        print(f\"************** Train Start At TASK{i}\")\n",
     "        for e in tqdm(range(1, epoch+1)):\n",
     "            train_ewc(model, device, train_loader0, optimizer, e, i)\n",
@@ -1050,6 +917,7 @@
     "\n",
     "        # test\n",
     "        _, recall20 = test(model, device, test_loader0)\n",
+    "        recall_list.append(recall20)\n",
     "        print(f\"******* At {i} TASK recall20 = {recall20}\\n\")\n",
     "\n",
     "    else:\n",
@@ -1062,7 +930,7 @@
     "        test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False)\n",
     "\n",
     "        # train\n",
-    "        epoch = 1\n",
+    "        epoch = EPOCH\n",
     "        print(f\"************** Train Start At TASK{i}\")\n",
     "        for e in tqdm(range(1, epoch+1)):\n",
     "            train_ewc(model, device, train_loader, optimizer, e, i)\n",
@@ -1070,7 +938,10 @@
     "\n",
     "        # test\n",
     "        _, recall20 = test(model, device, test_loader)\n",
-    "        print(f\"******* At {i} TASK recall20 = {recall20}\\n\")"
+    "        recall_list.append(recall20)\n",
+    "        print(f\"******* At {i} TASK recall20 = {recall20}\\n\")\n",
+    "\n",
+    "print(f\"avg recall : {sum(recall_list)/len(recall_list)}\")"
    ],
    "metadata": {
     "collapsed": false
@@ -1078,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1087,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1096,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "outputs": [],
    "source": [],
    "metadata": {
